<resources>
    <string name="app_name">HeartSounds_2.0</string>
    <string name="logoutTitle">Logout</string>
    <string name="positiveButtonOk">OK</string>
    <string name="negativeButtonCancel">Cancel</string>
    <string name="positiveButtonYes">Yes</string>
    <string name="negativeButtonNo">No</string>
    <string name="positiveButtonShare">Share</string>
    <string name="negativeButtonHide">Hide</string>
    <string name="defaultSpinnerString">(not set)</string>
    <string name="defaultEmptyString">(empty)</string>

    <!-- Common Toolbar items -->
    <string name="refreshViewItemText">Refresh</string>
    <string name="saveChangesItemText">Save</string>
    <string name="cancelChangesItemText">Cancel</string>

    <!-- Common Patient HearSound activity Toolbar items -->
    <string name="deleteItemText">Delete</string>
    <string name="editItemText">Edit</string>


    <!-- User Patient activity Toolbar items -->
    <string name="logoutItemText">Logout</string>
    <string name="filterPatientsItemText">Filter</string>
    <string name="addPatientItemText">New Patient</string>

    <!-- Patient Toolbar Items-->
    <string name="sharePatientItemText">Share</string>

    <!-- Login Page -->
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>

    <!-- User Profile Fragment -->
    <string name="userRoleText">User Role</string>
    <string name="firstNameLabel">First Name</string>
    <string name="firstNameHint">first name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="lastNameHint">last name</string>
    <string name="userNameLabel">Username</string>
    <string name="userNameHint">username</string>
    <string name="logoutButtonText">Log Out</string>

    <!-- Bottom Navigation Bar Menu Items -->
    <string name="userProfile">Profile</string>
    <string name="myPatients">My Patients</string>
    <string name="sharedPatients">Shared Patients</string>
    <string name="otherPatients">Other Patients</string>

    <!-- UserPatientActivity -->

    <!-- PatientHeartSoundActivity -->
    <string name="addHeartSoundButtonLabel">Add Heart Sound</string>
    <string name="addMurmurRatingButtonLabel">Add Murmur Rating</string>

    <!-- Patient Fragment -->
    <string name="patientIdLabel">Patient Id</string>
    <string name="studyLabel">Study</string>
    <string name="studyList">(not set)</string>
    <string name="createdByLabel">Created By</string>
    <string name="genderLabel">Gender</string>
    <string name="gender">(not set)</string>
    <string name="dateOfBirthLabel">Date Of Birth*</string>
    <string name="dateOfBirth">(not set)</string>
    <string name="visibleToStudentsLabel">Visible to Students</string>
    <string name="visibleToUsersLabel">Visible to</string>
    <string name="visibleToUsersCount">0 users</string>
    <string name="savePatientButtonText">Save Changes</string>

    <!-- HeartSound Fragment -->
    <string name="heartSoundIdLabel">HeartSound Id</string>
    <string name="saveHeartSoundButtonText">Save Changes</string>
    <string name="deviceIdLabel">Device Id</string>
    <string name="voiceCommentLabel">Voice Comment</string>
    <string name="heartSoundLabel">Heart Sound</string>

    <!-- MurmurRating Fragment -->
    <string name="phaseOfCardiacCycleLabel">Phase of Cardiac Cycle:</string>
    <string name="intensityLabel">Intensity:</string>
    <string name="murmerDurationLabel">Murmer Duration:</string>
    <string name="mostIntenseLocationLabel">Most Intense Location:</string>
    <string name="radiationLabel">Radiation:</string>
    <string name="characterText">Character:</string>
    <string name="selectedCharacters">(none)</string>
    <string name="addedSoundsLabel">Added Sounds:</string>
    <string name="sOneLabel">S1:</string>
    <string name="sTwoLabel">S2:</string>
    <string name="changeWithBreathingLabel">Change With Breathing:</string>
    <string name="valsalvaLabel">Valsalva:</string>
    <string name="leftLateralPositionLabel">Left Lateral Position:</string>
    <string name="sittingForwardLabel">Sitting Forward:</string>
    <string name="finalDiagnosisLabel">Final Diagnosis:</string>
    <string name="saveMurmerRatingButtonText">Save Changes</string>

    <!-- Multi Selector Dialog -->
    <string name="selectAllButtonText">Select All</string>
    <string name="deselectAllButtonText">Deselect All</string>

    <!-- Multi-Character Selector Dialog -->
    <string name="multipleCharacterSelectorDialogTitle">Characters</string>

    <!-- Multi-Study Selector Dialog -->
    <string name="multipleStudySelectorDialogTitle">Study List</string>

    <!-- Multi-Doctor Selector Dialog -->
    <string name="multipleDoctorSelectorDialogTitle">Study List</string>

    <!-- Gender Selector Dialog -->
    <string name="genderSelectorDialogTitle">Gender</string>

    <!-- Stethoscope download/upload track selector -->
    <string name="trackSelectorDialogTitle">Tracks</string>

    <!-- FilterDialogFragment -->
    <string name="searchMenu">Search</string>
    <string name="filterStringView">Filters Selected</string>
    <string name="searchButton">Search</string>
    <string name="filterSearch">Filter Items</string>

    <!-- Change Password Dialog -->
    <string name="changePasswordItemText">Change Password</string>
    <string name="oldPasswordLabel">Old Password</string>
    <string name="newPasswordLabel">New Password</string>
    <string name="confirmNewPasswordLabel">Confirm New Password</string>

    <!-- PatientHeartSoundActivity -->
    <string name="navigationDrawerOpen">Open Navigation Drawer</string>
    <string name="navigationDrawerClose">Close Navigation Drawer</string>

    <!-- StethoscopeInteractionFragment -->
    <string name="playFromStethoscope">Play in Stethoscope</string>
    <string name="downloadFromStethoscope">Download</string>
    <string name="uploadToStethoscope">Upload</string>
    <string name="connectToStethoscope">Connect To Stethoscope</string>

    <!-- User Messages -->
    <string name="confirmationMesage">Are you sure?</string>
    <string name="loggingIn">Logging in</string>
    <string name="errorMessage">An Error Occurred</string>
    <string name="errorTitle">Error</string>
    <string name="sharingPatient">Sharing Patient</string>
    <string name="unsharingPatient">Unsharing Patient</string>
    <string name="retrievingPatientDetails">Retrieving Patient Details</string>
    <string name="retrievingHeartSound">Retrieving Heart Sound</string>
    <string name="retrievingUserDetails">Retrieving User Details</string>
    <string name="retrievingUsers">Retrieving Users</string>
    <string name="retrievingPatientHeartSounds">Retrieving Patient Heart Sounds</string>
    <string name="retrievingMurmurRating">Retrieving Murmur Rating for Heart Sound</string>
    <string name="creatingPatient">Creating Patient</string>
    <string name="creatingHeartSound">Creating Patient</string>
    <string name="creatingMurmurRating">Creating Murmur Rating</string>
    <string name="updatingPatient">Updating Patient</string>
    <string name="patientUpdated">Patient Updated</string>
    <string name="updatingHeartSound">Updating Heart Sound</string>
    <string name="updatingMurmurRating">Updating Murmur Rating</string>
    <string name="deletingPatient">Deleting Patient</string>
    <string name="patientDeleted">Patient Deleted</string>
    <string name="deletePatient">Delete Patient</string>
    <string name="deletingHeartSound">Updating Heart Sound</string>
    <string name="deletingMurmurRating">Deleting Murmur Rating</string>
    <string name="deletingMurmurRatingFailed">Could not delete Murmur Rating</string>
    <string name="connectingToStethoscopeMessage">Connecting to Available Stethoscope</string>
    <string name="playingDataToStethoscopeMessage">Playing on Stethoscope </string>
    <string name="downloadingFromStethoscopeMessage">Downloading </string>
    <string name="uploadingToStethoscopeMessage">Uploading </string>
    <string name="incorrectDateOfBirthMessage">Please select a Date of Birth</string>
    <string name="qualityOfRecordingFailedToUpdateMessage">Could not update Quality of recording</string>
    <string name="emptyAudioTrack">Could not download, the audio track is empty</string>
    <string name="noDataToUpload">No Data to upload</string>
    <string name="noDataToPlay">No Data to play</string>
    <string name="uploadFailed">Upload Failed</string>
    <string name="successfulPasswordChange">Password Changed Successfully</string>
    <string name="unsuccessfulPasswordChange">Password change unsuccessful</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
