<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/editItem"
        android:icon="@drawable/ic_pencil_white_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/editItemText">
    </item>

    <item
        android:id="@+id/sharePatientItem"
        android:icon="@drawable/ic_share_variant_white_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/sharePatientItemText">
    </item>

    <item
        android:id="@+id/deleteItem"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title="@string/deleteItemText">
    </item>

    <item
        android:id="@+id/refreshViewItem"
        app:showAsAction="ifRoom"
        android:orderInCategory="4"
        android:title="@string/refreshViewItemText"
        android:icon="@drawable/ic_refresh_white_24dp">
    </item>

    <item
        android:id="@+id/saveChangesItem"
        app:showAsAction="ifRoom"
        android:orderInCategory="5"
        android:title="@string/saveChangesItemText"
        android:icon="@drawable/ic_check_white_24dp">
    </item>

    <item
        android:id="@+id/cancelChangesItem"
        app:showAsAction="ifRoom"
        android:orderInCategory="6"
        android:title="@string/cancelChangesItemText"
        android:icon="@drawable/ic_cancel_white_24dp">
    </item>
</menu>