<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.head_first.aashi.heartsounds_20.controller.fragment.UserProfileFragment"
    style="@style/layoutPadding">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/userRoleText"
        android:text="@string/userRoleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/firstNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userRoleText">
        <TextView
            android:id="@+id/firstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstNameLabel"
            style="@style/viewSeparation"/>
        <TextView
            android:id="@+id/firstNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/firstNameHint"
            android:layout_below="@id/firstNameLabel"/>
        <EditText
            android:id="@+id/editableFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/firstNameHint"
            android:visibility="gone"
            android:layout_below="@id/firstNameLabel"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lastNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstNameContainer">
        <TextView
            android:id="@+id/lastNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastNameLabel"
            style="@style/viewSeparation"/>
        <TextView
            android:id="@+id/lastNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lastNameHint"
            android:layout_below="@id/lastNameLabel"/>
        <EditText
            android:id="@+id/editableLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lastNameHint"
            android:visibility="gone"
            android:layout_below="@id/lastNameLabel"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameLabel"
        android:layout_below="@id/lastNameContainer"
        style="@style/viewSeparation"/>
    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/userNameHint"
        android:layout_below="@id/userNameLabel"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoutButtonText"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
