<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/userProfile"
        android:enabled="true"
        android:icon="@drawable/ic_account_grey600_48dp"
        android:title="@string/userProfile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/myPatients"
        android:enabled="true"
        android:icon="@drawable/ic_account_grey600_48dp"
        android:title="@string/myPatients"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/otherPatients"
        android:enabled="true"
        android:icon="@drawable/ic_account_grey600_48dp"
        android:title="@string/sharedPatients"
        app:showAsAction="ifRoom"/>

</menu>