<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sharePatientItem"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/sharePatientItemText">
    </item>

    <item
        android:id="@+id/deletePatientItem"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/deleteItemText">
    </item>

    <item
        android:id="@+id/editItem"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:visible="false"
        android:title="@string/editItemText">
    </item>

</menu>