<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.head_first.aashi.heartsounds_20.controller.fragment.StethoscopeInteractionFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/uploadToStethoscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadToStethoscope"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="233dp" />

    <Button
        android:id="@+id/downloadFromStethoscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloadFromStethoscope"
        android:layout_above="@+id/uploadToStethoscope"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" />

    <Button
        android:id="@+id/playFromStethoscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playFromStethoscope"
        android:layout_above="@+id/downloadFromStethoscope"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" />

    <Button
        android:id="@+id/connectToStethoscope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectToStethoscope"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
