<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/rootLayoutPadding">

    <TextView
        android:id="@+id/oldPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oldPasswordLabel"
        android:layout_alignParentLeft="true">
    </TextView>

    <EditText
        android:id="@+id/oldPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultEmptyString"
        android:inputType="textPassword"
        android:layout_below="@id/oldPasswordLabel"
        android:layout_alignParentLeft="true">
    </EditText>

    <TextView
        android:id="@+id/newPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPasswordLabel"
        android:layout_below="@id/oldPasswordText"
        android:layout_alignParentLeft="true"
        style="@style/viewSeparation">
    </TextView>

    <EditText
        android:id="@+id/newPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultEmptyString"
        android:inputType="textPassword"
        android:layout_below="@id/newPasswordLabel"
        android:layout_alignParentLeft="true">
    </EditText>

    <TextView
        android:id="@+id/confirmNewPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmNewPasswordLabel"
        android:layout_below="@id/newPasswordText"
        android:layout_alignParentLeft="true"
        style="@style/viewSeparation">
    </TextView>

    <EditText
        android:id="@+id/confirmNewPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultEmptyString"
        android:inputType="textPassword"
        android:layout_below="@id/confirmNewPasswordLabel"
        android:layout_alignParentLeft="true">
    </EditText>

</RelativeLayout>