<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.head_first.aashi.heartsounds_20.HomePage"
    android:background="@android:color/black"
    android:weightSum="2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="3"
        android:layout_weight="0.8">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:weightSum="2"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_account_grey600_24dp"
                android:id="@+id/usernameImage"
                android:layout_weight="0.5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/username"
                android:layout_above="@+id/password"
                android:layout_centerHorizontal="true"
                android:hint="@string/usernameHint"
                android:layout_weight="1.5"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:weightSum="2"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_lock_grey600_24dp"
                android:id="@+id/passwordImage"
                android:layout_weight="0.5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/username"
                android:hint="@string/passwordHint"
                android:layout_weight="1.5"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:padding="5dp">

            <Button
                android:text="@string/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/loadingScreen"
        android:layout_marginTop="124dp"
        android:layout_weight="1.2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
